--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-3.07MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.18MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇹🇭 泰国-3.21MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-405.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.02MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.07MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
 rules:
