--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇹🇭 泰国-3.21MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-405.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-405.6KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-5.79MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-3.01MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.02MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇹🇭 泰国-3.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-405.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.01MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
