--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.06MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 (已存活1天)中国-4.21MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇬🇧 英国-2.59MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
-  - {name: 🇨🇦 加拿大-1.97MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 捷克-1.78MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇹🇭 泰国-2.48MB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林) 2, server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.05MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-5.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.94MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-2.70MB/s(Youtube:不良林), server: 134.195.196.128, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 捷克-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 捷克-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 捷克-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 捷克-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 捷克-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 捷克-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-4.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.97MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 捷克-1.78MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林)
+      - 🇹🇭 泰国-2.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.64MB/s(Youtube:不良林) 2
+      - 🇨🇦 加拿大-2.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
